# vis-mayors-challenge

./: Cargo.toml  LICENSE  README.md
.github/workflows/: gh-pages.yml
src/: lib.rs  sample_case.rs
web/: index.html
